--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "dependencies": {
         "@fortawesome/fontawesome-free": "5.3.1",
         "bootstrap": "4.1.3",
+        "gutenberg-css": "^0.4.4",
         "jquery": "3.3.1"
     },
     "devDependencies": {
